--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-router": "^4.3.1",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^5.0.1",
-    "react-stomp": "4.1.0",
+    "react-stomp": "^4.1.0",
     "react-test-renderer": "^16.4.2",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.4",
