--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-data-table-component": "^6.7.0",
     "react-dom": "^16.4.2",
     "react-file-base64": "^1.0.3",
+    "react-image-select-pv": "^2.2.1",
     "react-loadable": "^5.4.0",
     "react-redux": "^7.1.1",
     "react-router": "^4.3.1",
