--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "js-file-download": "^0.4.7",
     "notistack": "0.4.3",
     "prop-types": "^15.6.2",
+    "query-string": "^6.12.1",
     "react": "^16.4.2",
     "react-chartjs-2": "^2.7.2",
     "react-circular-progressbar": "^2.0.1",
