--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^5.0.1",
     "react-stomp": "^4.1.0",
     "react-test-renderer": "^16.4.2",
+    "react-viewer": "^3.2.1",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
