--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest-dom": "^3.5.0",
     "jquery": "^3.3.1",
     "js-file-download": "^0.4.7",
+    "material-ui": "^0.20.2",
     "notistack": "0.4.3",
     "prop-types": "^15.6.2",
     "query-string": "^6.12.1",
