--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-file-base64": "^1.0.3",
     "react-id-generator": "^3.0.0",
     "react-loadable": "^5.4.0",
+    "react-player": "^1.15.3",
     "react-redux": "^7.1.1",
     "react-router": "^4.3.1",
     "react-router-config": "^1.0.0-beta.4",
