--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.1",
-    "@material-ui/core": "^v3.9.2",
+    "@material-ui/core": "^3.9.4",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/react": "^8.0.1",
     "ajv": "^6.10.2",
     "axios": "^0.18.0",
