--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "react-data-table-component": "^6.7.0",
     "react-dom": "^16.4.2",
     "react-file-base64": "^1.0.3",
-    "react-id-generator": "^3.0.0",
     "react-loadable": "^5.4.0",
     "react-player": "^1.15.3",
     "react-redux": "^7.1.1",
@@ -57,6 +56,7 @@
     "simple-line-icons": "^2.4.1",
     "styled-components": "^5.1.0",
     "typescript": "^3.5.3",
+    "uuid-random": "^1.3.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
