--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prop-types": "^15.6.2",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
+    "react-block-ui": "^1.3.3",
     "react-chartjs-2": "^2.7.2",
     "react-circular-progressbar": "^2.0.1",
     "react-copy-to-clipboard": "5.0.1",
