--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.5.1",
     "js-file-download": "^0.4.12",
     "material-ui": "^0.20.2",
+    "nosleep.js": "^0.11.0",
     "notistack": "0.4.3",
     "prop-types": "^15.6.2",
     "query-string": "^6.12.1",
