--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.9.0",
     "@coreui/coreui": "^2.1.16",
     "@coreui/icons": "^1.0.1",
     "@coreui/react": "^2.5.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.10",
     "@material-ui/core": "^3.9.4",
     "@material-ui/icons": "^4.9.1",
     "ajv": "^6.12.2",
+    "auth0-js": "^9.13.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
@@ -20,6 +25,7 @@
     "faker": "^4.1.0",
     "flag-icon-css": "^3.4.6",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^10.0.3",
     "install": "^0.12.2",
     "jest-dom": "^3.5.0",
     "jquery": "^3.5.1",
@@ -41,7 +47,7 @@
     "react-player": "^1.15.3",
     "react-router": "^4.3.1",
     "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.2.0",
     "react-stomp": "^4.1.0",
     "react-viewer": "^3.2.1",
     "reactstrap": "^8.4.1",
@@ -56,7 +62,7 @@
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.18.2",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss",
