--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 REACT_APP_API_URL=http://localhost:8080
 
 # Auth0
-REACT_APP_AUTH0_RETURN_URL=http://localhost:3000/home
+REACT_APP_AUTH0_RETURN_URL=http://localhost:3000/
 REACT_APP_AUTH0_REDIRECT_URL=
 REACT_APP_AUTH0_DOMAIN=
 REACT_APP_AUTH0_AUDIENCE=
