--- a/package.json
+++ b/package.json
@@ -9,59 +9,58 @@
     "@coreui/coreui": "^2.1.16",
     "@coreui/icons": "^1.0.1",
     "@coreui/react": "^2.5.8",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.10",
-    "@material-ui/core": "^3.9.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "ajv": "^6.12.2",
-    "auth0-js": "^9.13.2",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.1.3",
-    "chart.js": "^2.7.2",
+    "ajv": "^6.12.4",
+    "auth0-js": "^9.13.4",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
-    "core-js": "^2.5.7",
-    "faker": "^4.1.0",
-    "flag-icon-css": "^3.4.6",
+    "core-js": "^3.6.5",
+    "faker": "^5.1.0",
+    "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
-    "highlight.js": "^10.0.3",
-    "install": "^0.12.2",
-    "jest-dom": "^3.5.0",
+    "highlight.js": "^10.1.2",
+    "install": "^0.13.0",
+    "jest-dom": "^4.0.0",
     "jquery": "^3.5.1",
     "js-file-download": "^0.4.12",
     "material-ui": "^0.20.2",
     "nosleep.js": "^0.11.0",
-    "notistack": "0.4.3",
-    "prop-types": "^15.6.2",
-    "query-string": "^6.12.1",
+    "notistack": "1.0.0",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-block-ui": "^1.3.3",
-    "react-chartjs-2": "^2.7.2",
-    "react-circular-progressbar": "^2.0.1",
-    "react-copy-to-clipboard": "5.0.1",
-    "react-data-table-component": "^6.7.0",
-    "react-dom": "^16.4.2",
+    "react-chartjs-2": "^2.10.0",
+    "react-circular-progressbar": "^2.0.3",
+    "react-copy-to-clipboard": "5.0.2",
+    "react-data-table-component": "^6.11.2",
+    "react-dom": "^16.13.1",
     "react-file-base64": "^1.0.3",
-    "react-loadable": "^5.4.0",
-    "react-player": "^1.15.3",
-    "react-router": "^4.3.1",
-    "react-router-config": "^1.0.0-beta.4",
+    "react-loadable": "^5.5.0",
+    "react-player": "^2.6.1",
+    "react-router": "^5.2.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
-    "react-stomp": "^4.1.0",
-    "react-viewer": "^3.2.1",
-    "reactstrap": "^8.4.1",
-    "request": "2.87.0",
-    "request-promise-native": "1.0.5",
-    "simple-line-icons": "^2.4.1",
-    "styled-components": "^5.1.0",
-    "uuid-random": "^1.3.0"
+    "react-stomp": "^5.0.0",
+    "react-viewer": "^3.2.2",
+    "reactstrap": "^8.5.1",
+    "request": "2.88.2",
+    "request-promise-native": "1.0.9",
+    "simple-line-icons": "^2.5.5",
+    "styled-components": "^5.1.1",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
-    "babel-jest": "^24.8.0",
-    "node-sass-chokidar": "^1.3.0",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.18.2",
-    "react-scripts": "^3.4.1"
+    "node-sass-chokidar": "^1.5.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.1.1",
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss",
